api-server.yml
apiVersion: v1
kind: Service
metadata:
    name: api-server
    namespace: quest-tracker
spec:
    ports:
        - name: http
          port: 80
    selector:
        service: api-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-server
    namespace: quest-tracker
    labels:
        type: server
spec:
    replicas: 2
    selector:
        matchLabels:
            service: api-server
    template:
        metadata:
            labels:
                service: api-server
                type: server
        spec:
            containers:
                - name: api-server
                  image: emanguy/questtracker-frontendapi:1.0.0
                  ports:
                      - name: http
                        containerPort: 80
                  livenessProbe:
                      httpGet:
                          path: /quests
                          port: 80
                      initialDelaySeconds: 7
