frontend-web.yml
apiVersion: v1
kind: Service
metadata:
    name: frontend-web
    namespace: quest-tracker
spec:
    ports:
        - name: http
          port: 80
    selector:
        service: frontend-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-web
    namespace: quest-tracker
    labels:
        type: server
spec:
    replicas: 1
    selector:
        matchLabels:
            service: frontend-web
    template:
        metadata:
            labels:
                service: frontend-web
                type: server
        spec:
            containers:
                - name: frontend-web
                  image: emanguy/questtracker-userfrontend:1.0.1
                  ports:
                      - name: http
                        containerPort: 80
