mongo.yml
apiVersion: v1
kind: Service
metadata:
    name: mongo-db
    namespace: quest-tracker
spec:
    clusterIP: None
    ports:
        - name: mongo-port
          port: 27017
    selector:
        service: mongo-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mongo-db
    namespace: quest-tracker
    labels:
        type: database
        dbType: mongo
spec:
    replicas: 1
    serviceName: mongo-db
    selector:
        matchLabels:
            service: mongo-db
    volumeClaimTemplates:
        - metadata:
            name: mongo-persistent-storage
          spec:
            accessModes:
                - ReadWriteOnce
            resources:
                requests:
                    storage: 10Gi
    template:
        metadata:
            labels:
                service: mongo-db
                type: database
                dbType: redis
        spec:
            volumes:
                - name: mongo-init
                  configMap:
                      name: mongo-init
            containers:
                - name: mongo-db
                  image: mongo:4.0
                  volumeMounts:
                      - name: mongo-init
                        mountPath: /docker-entrypoint-initdb.d/
                      - name: mongo-persistent-storage
                        mountPath: /data/db/
                  ports:
                      - name: mongo-port
                        containerPort: 27017
