notification-service.yml
apiVersion: v1
kind: Service
metadata:
    name: notification-service
    namespace: quest-tracker
spec:
    ports: 
        - name: http
          port: 80
    selector:
        service: notification-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: notification-service
    namespace: quest-tracker
    labels:
        type: server
spec:
    replicas: 2
    selector:
        matchLabels:
            service: notification-service
    template:
        metadata:
            labels:
                service: notification-service
                type: server
        spec:
            containers:
                - name: notification-service
                  image: emanguy/questtracker-notificationservice:1.0.1
                  ports:
                      - name: http
                        containerPort: 80
