redis.yml
apiVersion: v1
kind: Service
metadata:
    name: redis-db
    namespace: quest-tracker
spec:
    clusterIP: None
    ports:
        - name: redis-port
          port: 6379
    selector:
        service: redis-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: redis-db
    namespace: quest-tracker
    labels:
        type: database
        dbType: redis

spec:
    replicas: 1
    serviceName: redis-db
    selector:
        matchLabels:
            service: redis-db
    template:
        metadata:
            labels:
                service: redis-db
                type: database
                dbType: redis
        spec:
            containers:
                - name: redis-db
                  image: bitnami/redis:4.0.9
                  ports:
                      - name: redis-port
                        containerPort: 6379
