ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: quest-tracker-ing
    namespace: quest-tracker
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: quest-tracker-by.evanrittenhou.se
          http:
            paths:
                - path: /api/v1
                  backend:
                      serviceName: api-server
                      servicePort: http
                - path: /notification/v1
                  backend:
                      serviceName: notification-service
                      servicePort: http
                - backend:
                      serviceName: frontend-web
                      servicePort: http
